fix: logo styles

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -22,6 +22,7 @@
       width: 5.1875rem;
 
       .logo {
+        content: url("/icons/logo-small.svg");
         width: 1.4375rem;
       }
     }
@@ -52,6 +53,7 @@
 
 .logo {
   width: 7.375rem;
+  content: url("/icons/logo-large.svg");
 
   @media (min-width: breakpoint.$desktop) {
     margin: space.$s0 space.$s4;
