--- a/features/layout/page-container/page-container.module.scss
+++ b/features/layout/page-container/page-container.module.scss
@@ -8,24 +8,33 @@
   display: flex;
   flex-direction: column;
   background: color.$gray-900;
+  min-height: 100dvh;
 
   @media (min-width: breakpoint.$desktop) {
-    flex-direction: row;
+    display: grid;
+    grid-template:
+      "navigation main" 1fr
+      "navigation footer" auto
+      / auto 1fr;
   }
 }
 
+.navigation {
+  grid-area: navigation;
+}
+
 .main {
+  display: grid;
+  grid-area: main;
   flex: 1;
 }
 
 .contentContainer {
-  min-height: calc(100vh - 2 * space.$s8 - misc.$header-height);
   margin-top: misc.$header-height;
   padding: space.$s8 space.$s3;
   background: white;
 
   @media (min-width: breakpoint.$desktop) {
-    min-height: calc(100vh - space.$s3 - 2 * space.$s8);
     margin-top: space.$s3;
     padding: space.$s8;
     border-top-left-radius: space.$s10;
