--- a/features/layout/footer/footer.module.scss
+++ b/features/layout/footer/footer.module.scss
@@ -43,7 +43,7 @@
 
 .logoContainer {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 
   @media (min-width: breakpoint.$desktop) {
     order: 3;
