--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,12 +1,57 @@
+@use "styles/color";
+@use "styles/space";
+@use "styles/breakpoint";
+
 .header {
+  margin: 0 auto;
+  max-width: 76rem;
   width: 100%;
   height: 80px;
   padding: 0 2rem;
   box-sizing: border-box;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   background: white;
+
+  .imgWrapper {
+    flex: 1;
+  }
+
+  .buttonWrapper {
+    display: none;
+
+    @media (min-width: breakpoint.$desktop) {
+      flex: 1;
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
+
+  .button {
+    background: color.$primary-600;
+    border-radius: space.$s2;
+    padding: 0.625rem 1.125rem;
+    border: 1px solid color.$primary-600;
+    color: white;
+
+    /* Shadow/xs */
+    box-shadow: 0 1px 2px 0 rgb(16 24 40 / 5%);
+  }
+
+  .links {
+    display: none;
+
+    @media (min-width: breakpoint.$desktop) {
+      a {
+        color: color.$gray-500;
+      }
+
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      text-decoration: none;
+    }
+  }
 }
 
 .contactButton {
